{
  "version": 4,
  "terraform_version": "1.1.3",
  "serial": 217,
  "lineage": "5a630be5-2481-db24-2243-89483c50e322",
  "resources": [
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "mtc_private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:405836210154:route-table/rtb-0f8dc785280d69974",
            "default_route_table_id": "rtb-0f8dc785280d69974",
            "id": "rtb-0f8dc785280d69974",
            "owner_id": "405836210154",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Name": "mtc_private"
            },
            "tags_all": {
              "Name": "mtc_private"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cb20828b114caa70"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.mtc_vpc",
            "module.networking.random_integer.random"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "mtc_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:405836210154:internet-gateway/igw-08f8fcfcf9875f230",
            "id": "igw-08f8fcfcf9875f230",
            "owner_id": "405836210154",
            "tags": {
              "Name": "mtc_igw"
            },
            "tags_all": {
              "Name": "mtc_igw"
            },
            "vpc_id": "vpc-0cb20828b114caa70"
          },
          "dependencies": [
            "module.networking.aws_vpc.mtc_vpc",
            "module.networking.random_integer.random"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route",
      "name": "default_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-08f8fcfcf9875f230",
            "id": "r-rtb-035e2df3071624efe1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-035e2df3071624efe",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_internet_gateway.mtc_internet_gateway",
            "module.networking.aws_route_table.mtc_public_rt",
            "module.networking.aws_vpc.mtc_vpc",
            "module.networking.random_integer.random"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "mtc_public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:405836210154:route-table/rtb-035e2df3071624efe",
            "id": "rtb-035e2df3071624efe",
            "owner_id": "405836210154",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "mtc_public"
            },
            "tags_all": {
              "Name": "mtc_public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cb20828b114caa70"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.mtc_vpc",
            "module.networking.random_integer.random"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "mtc_public_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a761082e9257b667",
            "route_table_id": "rtb-035e2df3071624efe",
            "subnet_id": "subnet-09c2c84bbfda66c8e"
          },
          "dependencies": [
            "module.networking.aws_route_table.mtc_public_rt",
            "module.networking.aws_subnet.mtc_public_subnet",
            "module.networking.aws_vpc.mtc_vpc",
            "module.networking.data.aws_availability_zones.available",
            "module.networking.random_integer.random",
            "module.networking.random_shuffle.az_list"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-062564c89cfeea7c6",
            "route_table_id": "rtb-035e2df3071624efe",
            "subnet_id": "subnet-07d420b21f85299a9"
          },
          "dependencies": [
            "module.networking.aws_route_table.mtc_public_rt",
            "module.networking.aws_subnet.mtc_public_subnet",
            "module.networking.aws_vpc.mtc_vpc",
            "module.networking.data.aws_availability_zones.available",
            "module.networking.random_integer.random",
            "module.networking.random_shuffle.az_list"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "mtc_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "public",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:405836210154:security-group/sg-06af5e045b5a1c9fd",
            "description": "Security Group for Public Access",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06af5e045b5a1c9fd",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "public_sg",
            "name_prefix": "",
            "owner_id": "405836210154",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "mtc_sg_public_access"
            },
            "tags_all": {
              "Name": "mtc_sg_public_access"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cb20828b114caa70"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.mtc_vpc",
            "module.networking.random_integer.random"
          ]
        },
        {
          "index_key": "rds",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:405836210154:security-group/sg-076837af30f20120c",
            "description": "RDS Access",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-076837af30f20120c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "rds_sg",
            "name_prefix": "",
            "owner_id": "405836210154",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "mtc_sg_public_access"
            },
            "tags_all": {
              "Name": "mtc_sg_public_access"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cb20828b114caa70"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.mtc_vpc",
            "module.networking.random_integer.random"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "mtc_private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:405836210154:subnet/subnet-0420480879edcc128",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.123.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0420480879edcc128",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "405836210154",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "mtc_private_1"
            },
            "tags_all": {
              "Name": "mtc_private_1"
            },
            "vpc_id": "vpc-0cb20828b114caa70"
          },
          "dependencies": [
            "module.networking.aws_vpc.mtc_vpc",
            "module.networking.data.aws_availability_zones.available",
            "module.networking.random_integer.random",
            "module.networking.random_shuffle.az_list"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:405836210154:subnet/subnet-04405a8023ed2a2dd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.123.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04405a8023ed2a2dd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "405836210154",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "mtc_private_2"
            },
            "tags_all": {
              "Name": "mtc_private_2"
            },
            "vpc_id": "vpc-0cb20828b114caa70"
          },
          "dependencies": [
            "module.networking.aws_vpc.mtc_vpc",
            "module.networking.data.aws_availability_zones.available",
            "module.networking.random_integer.random",
            "module.networking.random_shuffle.az_list"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:405836210154:subnet/subnet-0bfa84ee554cfb554",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.123.5.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bfa84ee554cfb554",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "405836210154",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "mtc_private_3"
            },
            "tags_all": {
              "Name": "mtc_private_3"
            },
            "vpc_id": "vpc-0cb20828b114caa70"
          },
          "dependencies": [
            "module.networking.aws_vpc.mtc_vpc",
            "module.networking.data.aws_availability_zones.available",
            "module.networking.random_integer.random",
            "module.networking.random_shuffle.az_list"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "mtc_public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:405836210154:subnet/subnet-09c2c84bbfda66c8e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.123.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09c2c84bbfda66c8e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "405836210154",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "mtc_public_1"
            },
            "tags_all": {
              "Name": "mtc_public_1"
            },
            "vpc_id": "vpc-0cb20828b114caa70"
          },
          "dependencies": [
            "module.networking.aws_vpc.mtc_vpc",
            "module.networking.data.aws_availability_zones.available",
            "module.networking.random_integer.random",
            "module.networking.random_shuffle.az_list"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:405836210154:subnet/subnet-07d420b21f85299a9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.123.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07d420b21f85299a9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "405836210154",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "mtc_public_2"
            },
            "tags_all": {
              "Name": "mtc_public_2"
            },
            "vpc_id": "vpc-0cb20828b114caa70"
          },
          "dependencies": [
            "module.networking.aws_vpc.mtc_vpc",
            "module.networking.data.aws_availability_zones.available",
            "module.networking.random_integer.random",
            "module.networking.random_shuffle.az_list"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "mtc_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:405836210154:vpc/vpc-0cb20828b114caa70",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.123.0.0/16",
            "default_network_acl_id": "acl-0f75127fc891c3a2e",
            "default_route_table_id": "rtb-0f8dc785280d69974",
            "default_security_group_id": "sg-0bd959aa09b1085bf",
            "dhcp_options_id": "dopt-0ef39da9f75e32c2e",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0cb20828b114caa70",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0f8dc785280d69974",
            "owner_id": "405836210154",
            "tags": {
              "Name": "mtc_vpc_91"
            },
            "tags_all": {
              "Name": "mtc_vpc_91"
            }
          },
          "dependencies": [
            "module.networking.random_integer.random"
          ],
          "create_before_destroy": true
        }
      ]
    }
  ]
}